--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -14,7 +14,7 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Home <span class="sr-only">(current)</span></a></li>
+        <li ><a href="#">Home <span class="sr-only">(current)</span></a></li>
         <li><a href="#">Explore</a></li>
         
       </ul>
@@ -38,6 +38,7 @@
             <li><a href="#">Settings</a></li>
             <li role="separator" class="divider"></li>
             <li><a href="#">Log Out</a></li>
+            
           </ul>
         </li>
       </ul>
