After adding dynamic navigation to nav bar

--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -17,7 +17,7 @@
      <div class="col-xs-6">
          <div class="panel panel-default">
   <div class="panel-body">
-     <p>tweets</p>
+     <p>kliks</p>
   </div>
 </div>
        
@@ -34,7 +34,7 @@
 </div>
 
 <div class="row">
-    <div class="col-xs-3">
+    <div class="col-xs-3 col-xs-offset-9">
           <div class="panel panel-default">
   <div class="panel-body">
      <p>trends</p>
