After strong parameters and mdifying Profile in nav users

--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="col-xs-12">
-        <div class="jumbotron"><p>Timeline </p></div>
+        <div class="jumbotron"><p><%= @username %> </p></div>
     </div>
     
     
