--- a/app/views/layouts/_nav_user.html.erb
+++ b/app/views/layouts/_nav_user.html.erb
@@ -1,4 +1,5 @@
 
+
 <nav class="navbar navbar-default">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
@@ -29,10 +30,10 @@
       </form>
         <li><a href="#">Klik</a></li>
         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><%= current_user.email %> <span class="caret"></span></a>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><%= current_user.username %> <span class="caret"></span></a>
           <ul class="dropdown-menu">
               <li role="separator" class="divider"></li>
-            <li><a href="/profile">Profile</a></li>
+            <li><a href="/user/<%= current_user.username %>"></a>  Profile</a></li>
             <li role="separator" class="divider"></li>
             <li><a href="#">Help</a></li>
             <li role="separator" class="divider"></li>
