--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -14,12 +14,16 @@
   </div>
 </div>
     </div>
+
      <div class="col-xs-6">
+    <% for @p in @posts %>
          <div class="panel panel-default">
   <div class="panel-body">
-     <p>kliks</p>
+     <p><%= @p.content %> </p>
   </div>
+
 </div>
+<% end %>
        
      </div>
       <div class="col-xs-3">
