After adding post button

--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -16,6 +16,7 @@
     </div>
 
      <div class="col-xs-6">
+         <%= render'/components/post_form' %>
     <% for @p in @posts %>
          <div class="panel panel-default">
   <div class="panel-body">
@@ -32,23 +33,16 @@
      <p>whom to follow</p>
   </div>
 </div>
+          <div class="panel panel-default">
+  <div class="panel-body">
+     <p>trends</p>
+  </div>
           
       </div>
     
 </div>
 
-<div class="row">
-    <div class="col-xs-3 col-xs-offset-9">
-          <div class="panel panel-default">
-  <div class="panel-body">
-     <p>trends</p>
-  </div>
-</div> 
-    
-    
-    
-    
-</div>
+
 
 
 
